# math-series

./: pyproject.toml
math_series/: series.py
tests/: test_series.py
